[package]
name = "roblox_luau_env"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.39", features = ["derive"] }
ctrlc = "3.4.5"
eframe = "0.27.2"
egui = "0.27.2"
flate2 = "1.0"
mlua = { version = "0.11.6", features = ["luau", "vendored"] }
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tiny_http = "0.12"
